Corrige la classe PromotionServiceImpl et ses tests unitaires
- Aligne les signatures de create/update avec l’interface PromotionService (suppression de throws IOException)
- Implémente correctement les méthodes create(PromotionRequest, MultipartFile) et update(...)
- Met à jour les tests PromotionControllerTest et PromotionServiceImplTest pour lever et capturer les bonnes exceptions
- Nettoyage des imports et ajustement du package pour respecter la convention de nommage